--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@
         <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
-            <img src="/images/tablet_coding.png" alt="Планшет на якому редагують код"/>
+            <img src="images/tablet_coding.png" alt="Планшет на якому редагують код"/>
           </li>
           <li>
-            <img src="/images/smart_model.png" alt="Макет програми на дисплеї ноутбука"/>
+            <img src="images/smart_model.png" alt="Макет програми на дисплеї ноутбука"/>
           </li>
           <li>
-            <img src="/images/color_schema.png" alt="Схема основних кольорів на планшеті"/>
+            <img src="images/color_schema.png" alt="Схема основних кольорів на планшеті"/>
           </li>
         </ul>
       </section>
@@ -86,22 +86,22 @@
           <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="/images/Ihor.jpg" alt="Игорь Демьяненко">
+                    <img src="images/Ihor.jpg" alt="Игорь Демьяненко">
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/Olha.jpg" alt="Ольга Репина">
+                    <img src="images/Olha.jpg" alt="Ольга Репина">
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/Mykolai.jpg" alt="Николай Тарасов">
+                    <img src="images/Mykolai.jpg" alt="Николай Тарасов">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/Ivan.jpg" alt="Михаил Ермаков">
+                    <img src="images/Ivan.jpg" alt="Михаил Ермаков">
                     <h3>Иван Николаев</h3>
                     <p>UI Designer</p>
                 </li>
